--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -673,4 +673,118 @@ This way he'll be able to help you!</value>
   <data name="CurrentState" xml:space="preserve">
     <value>Current state</value>
   </data>
+  <data name="GuideIntroduction1.Text" xml:space="preserve">
+    <value>Brainf*ck is an esoteric programming language invented in 1993 by Urban Müller.</value>
+  </data>
+  <data name="GuideIntroduction2.Text" xml:space="preserve">
+    <value>The language itself replicates a Touring machine, as the state of the interpreter is only described of a memory array and a memory pointer than can move back and forth and change values of the memory cells, as it passes over them.</value>
+  </data>
+  <data name="GuideIntroduction3.Text" xml:space="preserve">
+    <value>A Brainf*ck program is made up of only 8 operators:</value>
+  </data>
+  <data name="GuideOperator1.Description" xml:space="preserve">
+    <value>Moves the memory pointer to the next cell</value>
+  </data>
+  <data name="GuideOperator2.Description" xml:space="preserve">
+    <value>Moves the memory pointer back</value>
+  </data>
+  <data name="GuideOperator3.Description" xml:space="preserve">
+    <value>Increments the value of the current cell</value>
+  </data>
+  <data name="GuideOperator4.Description" xml:space="preserve">
+    <value>Decrements the value of the current cell</value>
+  </data>
+  <data name="GuideOperator5.Description" xml:space="preserve">
+    <value>Starts a loop on the current cell, only if its value is greater than 0</value>
+  </data>
+  <data name="GuideOperator6.Description" xml:space="preserve">
+    <value>Loops and executes the current operators sequence if the value of the current cell is greater than 0</value>
+  </data>
+  <data name="GuideOperator8.Text" xml:space="preserve">
+    <value>Reads a Unicode character from the Stdin buffer and stores its value in the current memory cell</value>
+  </data>
+  <data name="GuideOperators7Part1.Text" xml:space="preserve">
+    <value>Prints the Unicode character corresponding to the value of the current memory cell. The Unicode table is available in the app, under the</value>
+  </data>
+  <data name="GuideOperators7Part2.Text" xml:space="preserve">
+    <value>menu</value>
+  </data>
+  <data name="GuidePBrain.Text" xml:space="preserve">
+    <value>PBrain is an extension of the Brainf*ck language, created by Paul M. Parks. It adds support for functions, with the addition of the following operators:</value>
+  </data>
+  <data name="GuidePBrainOperator1.Description" xml:space="preserve">
+    <value>Defines a function and binds it to the value of the current memory cell</value>
+  </data>
+  <data name="GuidePBrainOperator2.Description" xml:space="preserve">
+    <value>Ends the current function definition</value>
+  </data>
+  <data name="GuidePBrainOperator3.Description" xml:space="preserve">
+    <value>Calls the function associated with the value of the current memory cell</value>
+  </data>
+  <data name="GuidePBrainWarning.Text" xml:space="preserve">
+    <value>A function definition must contain at least a Brainf*ck operator and its body can't be empty. Moreover, it is not possible to define nested functions.</value>
+  </data>
+  <data name="GuideSamplePrintHelloComment1.Text" xml:space="preserve">
+    <value>7 in cell #0</value>
+  </data>
+  <data name="GuideSamplePrintHelloComment2.Text" xml:space="preserve">
+    <value>7 * 5 = 35 in cell #1</value>
+  </data>
+  <data name="GuideSamplePrintHelloComment3.Text" xml:space="preserve">
+    <value>35 * 2 in cell #2 and 35 * 3 in #3</value>
+  </data>
+  <data name="GuideSamplePrintHelloComment4.Text" xml:space="preserve">
+    <value>Back to loop start and decrement</value>
+  </data>
+  <data name="GuideSamplePrintHelloComment5.Text" xml:space="preserve">
+    <value>Adjust the values and print</value>
+  </data>
+  <data name="GuideSamplePrintHelloTitle.Text" xml:space="preserve">
+    <value>Print "Hello"</value>
+  </data>
+  <data name="GuideSampleResetComment.Text" xml:space="preserve">
+    <value>Subtract 1 each time</value>
+  </data>
+  <data name="GuideSampleResetTitle.Text" xml:space="preserve">
+    <value>Reset the current cell</value>
+  </data>
+  <data name="GuideSamples1.Text" xml:space="preserve">
+    <value>A good strategy to learn how to code in Brainf*ck, as with everything else, is to start from simpler and smaller programs and to make them more complex along the way.</value>
+  </data>
+  <data name="GuideSamples2.Text" xml:space="preserve">
+    <value>For example, a common operation is to reset the value of the current cell, whatever it may be.</value>
+  </data>
+  <data name="GuideSamples3.Text" xml:space="preserve">
+    <value>A simple loop can be used in this case:</value>
+  </data>
+  <data name="GuideSamples4.Text" xml:space="preserve">
+    <value>In many situations it is useful to make a copy of the current cell, to be able to perform some operations with its value, without losing track of the initial state of the memory cell.</value>
+  </data>
+  <data name="GuideSamples5.Text" xml:space="preserve">
+    <value>To achieve this, it is possible to create two copies of the current value, resetting the current cell, and then move the second copy back to the first cell, to end up with the original value plus a copy in the following cell.</value>
+  </data>
+  <data name="GuideSamples6.Text" xml:space="preserve">
+    <value>All these techniques can be combined to write more complex programs.</value>
+  </data>
+  <data name="GuideSamples7.Text" xml:space="preserve">
+    <value>A good idea is to try to optimize the script in order to perform as few operations as possible — generally this also means that the final code will be shorter and easier to read.</value>
+  </data>
+  <data name="GuideSamples8.Text" xml:space="preserve">
+    <value>In this example, to print the word "Hello" two loops will be used to set two cells to values closer to the letters that will be printed. It'd definitely better to use a similar approach than to repeating the + operator 72 times to print the "H" character.</value>
+  </data>
+  <data name="GuideSamples9.Text" xml:space="preserve">
+    <value>This script will set the cells #2 and #3 to values closer to the characters that will be printed by the program, so that less operations will be needed to get to the actual values the code wants to display to the user.</value>
+  </data>
+  <data name="GuideSampleSimpleLoopComment1.Text" xml:space="preserve">
+    <value>Copy in the cells #1 and #2</value>
+  </data>
+  <data name="GuideSampleSimpleLoopComment2.Text" xml:space="preserve">
+    <value>Decrement the first cell</value>
+  </data>
+  <data name="GuideSampleSimpleLoopComment3.Text" xml:space="preserve">
+    <value>Move second copy back to cell #0</value>
+  </data>
+  <data name="GuideSampleSimpleLoopTitle.Text" xml:space="preserve">
+    <value>Copy the current value</value>
+  </data>
 </root>
